Software patch to fix inaccuracy near the end of a cycle
    The bump on the dryer dial is a little bit too large. Therefore, when a cycle nears the end
    because the bump is large, it might close the switch before the dryer actually stops.
    This usually happens during the last 3 to 5 minutes.
 This could be fixed by using a smaller and more precise dryer bump; it is quite hard to find the RIGHT spot and size. This software patch should do it.

--- a/public/style.css
+++ b/public/style.css
@@ -114,6 +114,7 @@ nav ul li a {
     align-items: center;
     text-align: center;
     padding-bottom: 10px;
+    flex-direction: column;
 }
 
 .footer {
